[gd_scene load_steps=24 format=3 uid="uid://u6cx8pt1ulbr"]

[ext_resource type="Material" uid="uid://dqswpeiqmp3bu" path="res://Materials/main_root.tres" id="1_act5r"]
[ext_resource type="Script" uid="uid://bakalvvkpi5m" path="res://Scripts/character_body_3d.gd" id="2_qo65g"]
[ext_resource type="PackedScene" uid="uid://jpgcqqswv7rl" path="res://Characters/char_female_a_01.tscn" id="3_xhoxu"]

[sub_resource type="BoxMesh" id="BoxMesh_a4h74"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3mjdq"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p7klq"]
animation = &"IdleC_female"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yeix8"]
animation = &"JumpA_female"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jp31p"]
animation = &"RunningA_female"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r7alx"]
advance_mode = 2
advance_condition = &"is_jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4yvv8"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_semdt"]
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jtwky"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7d66v"]
advance_mode = 2
advance_condition = &"is_jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_di1ja"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h4n5u"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_b6kc4"]
states/End/position = Vector2(891, 109)
states/Start/position = Vector2(195, 109)
states/idle/node = SubResource("AnimationNodeAnimation_p7klq")
states/idle/position = Vector2(366.333, 109)
states/jump/node = SubResource("AnimationNodeAnimation_yeix8")
states/jump/position = Vector2(726.333, 109)
states/run/node = SubResource("AnimationNodeAnimation_jp31p")
states/run/position = Vector2(549.333, -48.1905)
transitions = ["run", "jump", SubResource("AnimationNodeStateMachineTransition_r7alx"), "jump", "run", SubResource("AnimationNodeStateMachineTransition_4yvv8"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_semdt"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_jtwky"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_7d66v"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_di1ja"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_h4n5u")]
graph_offset = Vector2(11.333, -98.19)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_sofaw"]
graph_offset = Vector2(-18, 129)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_b6kc4")
nodes/StateMachine/position = Vector2(284, 190)
nodes/output/position = Vector2(660, 180)
node_connections = [&"output", 0, &"StateMachine"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pwibu"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ayyf6"]
sky_top_color = Color(0.510505, 0.583795, 0.718435, 1)
sky_horizon_color = Color(0.59694, 0.791867, 0.847104, 1)
ground_bottom_color = Color(0.191498, 0.169159, 0.162641, 1)
sun_angle_max = 38.89

[sub_resource type="Sky" id="Sky_sm51x"]
sky_material = SubResource("ProceduralSkyMaterial_ayyf6")

[sub_resource type="Environment" id="Environment_ayyf6"]
background_mode = 2
sky = SubResource("Sky_sm51x")
ambient_light_source = 3
volumetric_fog_enabled = true
volumetric_fog_density = 0.0047
volumetric_fog_albedo = Color(0.791333, 0.842791, 0.888964, 1)
volumetric_fog_emission = Color(1, 1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ohry6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yeix8"]

[node name="Main Root2" type="Node3D"]

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 108.63, 0)
light_energy = 13.601
light_size = 0.564
omni_range = 419.679

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(60, 0, 0, 0, 1, 0, 0, 0, 60, 0, 0, 0)
mesh = SubResource("BoxMesh_a4h74")
skeleton = NodePath("StaticBody3D/CollisionShape3D")
surface_material_override/0 = ExtResource("1_act5r")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("BoxShape3D_3mjdq")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.644, 3.025, -0.625)
script = ExtResource("2_qo65g")

[node name="AnimationTree" type="AnimationTree" parent="Player"]
deterministic = false
root_node = NodePath("../Char_FemaleA_01")
root_motion_track = NodePath("%GeneralSkeleton:Hips")
root_motion_local = false
tree_root = SubResource("AnimationNodeBlendTree_sofaw")
anim_player = NodePath("../Char_FemaleA_01/AnimationPlayer")
parameters/StateMachine/conditions/is_idle = false
parameters/StateMachine/conditions/is_jumping = false
parameters/StateMachine/conditions/is_moving = false

[node name="Pivot" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0308524, 0, 0.696161)

[node name="SpringArm3D" type="SpringArm3D" parent="Player/Pivot"]
transform = Transform3D(2.265, 0, 0, 0, 2.57419, 0.625048, 0, -0.689752, 2.33271, -0.0610323, -1.53107, 0.70249)
spring_length = 2.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="Player/Pivot/SpringArm3D"]
transform = Transform3D(0.209644, 0, 0, 0, 0.327844, -0.00405809, 0, 0.00400557, 0.3236, 0.000187963, 0.455582, 1.15734)
fov = 78.0
near = 0.001

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1.4488, 0.656681)
shape = SubResource("CapsuleShape3D_pwibu")

[node name="Char_FemaleA_01" parent="Player" instance=ExtResource("3_xhoxu")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -2.37331, 0.751749)

[node name="GeneralSkeleton" parent="Player/Char_FemaleA_01" index="0"]
bones/0/position = Vector3(0.00603933, 0.917089, 0.0166937)
bones/0/rotation = Quaternion(-0.00757944, 0.0137677, -0.0484796, 0.998701)
bones/1/rotation = Quaternion(0.0066555, -0.011819, 0.0261382, 0.999566)
bones/2/rotation = Quaternion(-0.00171023, 0.000722653, 0.0517655, 0.998658)
bones/3/rotation = Quaternion(-0.00134333, 0.00610834, 0.0509666, 0.998681)
bones/4/rotation = Quaternion(0.00965174, -0.00221503, -0.0190288, 0.99977)
bones/5/rotation = Quaternion(0.0185433, 0.00602916, -0.0685324, 0.997458)
bones/8/rotation = Quaternion(0.395962, 0.551972, 0.557269, -0.477485)
bones/9/rotation = Quaternion(-0.0474132, 0.683151, -0.728601, -0.0140495)
bones/11/rotation = Quaternion(0.0501511, 0.514522, -0.0701611, 0.853129)
bones/12/rotation = Quaternion(-0.260449, 0.775666, 0.214398, 0.533425)
bones/13/rotation = Quaternion(0.261203, -0.0180979, 0.0181829, 0.964943)
bones/14/rotation = Quaternion(0.0587601, 0.00657205, 0.0123827, 0.998174)
bones/16/rotation = Quaternion(0.0767969, -0.000126173, -0.0417313, 0.996173)
bones/17/rotation = Quaternion(0.186833, -0.00113487, -0.0256901, 0.982055)
bones/18/rotation = Quaternion(0.097194, -0.000346632, -0.00799555, 0.995233)
bones/20/rotation = Quaternion(0.145216, -0.00294415, -0.0776042, 0.986347)
bones/21/rotation = Quaternion(0.295153, -0.00240511, -0.0364645, 0.954751)
bones/22/rotation = Quaternion(0.115346, 9.60351e-05, -0.0139299, 0.993228)
bones/24/rotation = Quaternion(0.206313, -0.00182093, -0.101779, 0.973177)
bones/25/rotation = Quaternion(0.321254, 0.00220372, -0.034821, 0.94635)
bones/26/rotation = Quaternion(0.145176, 0.00177644, -0.014329, 0.9893)
bones/28/rotation = Quaternion(0.284689, 0.00429544, -0.144977, 0.947584)
bones/29/rotation = Quaternion(0.365911, -0.00256769, -0.0353003, 0.929976)
bones/30/rotation = Quaternion(0.154769, -0.000234335, -0.0229517, 0.987684)
bones/32/rotation = Quaternion(0.44391, -0.498185, -0.523184, -0.530127)
bones/33/rotation = Quaternion(-0.0133306, 0.784298, -0.62024, 0.000439376)
bones/35/rotation = Quaternion(0.0198236, -0.625718, 0.117786, 0.77085)
bones/36/rotation = Quaternion(-0.260449, -0.775666, -0.214398, 0.533425)
bones/37/rotation = Quaternion(0.260709, 0.0182839, -0.0181382, 0.965074)
bones/38/rotation = Quaternion(0.0516821, -0.00177989, -0.0171636, 0.998515)
bones/40/rotation = Quaternion(0.0767969, 0.000126253, 0.0417313, 0.996173)
bones/41/rotation = Quaternion(0.186897, 0.00113496, 0.0256962, 0.982043)
bones/42/rotation = Quaternion(0.12908, 0.00199117, 0.00255302, 0.991629)
bones/44/rotation = Quaternion(0.14527, 0.00294564, 0.0776089, 0.986339)
bones/45/rotation = Quaternion(0.295205, 0.0024053, 0.0364691, 0.954735)
bones/46/rotation = Quaternion(0.14679, 0.000174903, 0.0157101, 0.989043)
bones/48/rotation = Quaternion(0.206313, 0.00182066, 0.101778, 0.973177)
bones/49/rotation = Quaternion(0.320779, -0.00220092, 0.0347737, 0.946513)
bones/50/rotation = Quaternion(0.131525, 0.00116622, -0.00290187, 0.991308)
bones/52/rotation = Quaternion(0.284689, -0.00429581, 0.144977, 0.947584)
bones/53/rotation = Quaternion(0.365407, 0.00256368, 0.0352488, 0.930177)
bones/54/rotation = Quaternion(0.169248, 0.00602939, -0.00148178, 0.985554)
bones/56/rotation = Quaternion(0.114143, 0.162947, 0.972227, -0.123269)
bones/57/rotation = Quaternion(-0.0378359, 0.9725, -0.216532, 0.0769791)
bones/58/rotation = Quaternion(-0.0487564, 0.676839, -0.729366, 0.0868204)
bones/61/rotation = Quaternion(-0.0410917, 0.00783932, 0.994668, -0.0942626)
bones/62/rotation = Quaternion(-0.0238033, 0.994168, -0.0949021, -0.04535)
bones/63/rotation = Quaternion(-0.0459819, 0.642908, -0.762911, 0.0502243)
bones/64/rotation = Quaternion(9.62986e-09, 0.999984, 0.00566955, 6.47131e-09)

[node name="hair_geo" parent="Player/Char_FemaleA_01/GeneralSkeleton" index="0"]
transform = Transform3D(0.999449, 0.0154814, 0.0293506, -0.0141074, 0.998821, -0.0464579, -0.0300352, 0.0460182, 0.998489, -0.0447368, -0.0262188, -0.0577249)

[node name="AnimationTree" parent="Player/Char_FemaleA_01" index="1"]
root_motion_track = NodePath("")
parameters/SkatingBlend/blend_amount = 0
parameters/StateMachine/movementBlender/blend_position = Vector2(-0.00265253, -0.900826)

[node name="DashAnimationTimer" type="Timer" parent="Player"]
wait_time = 0.3
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ayyf6")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1.565, 0, 0, 0, 2.70463, 0.883766, 0, -5.10817, 0.46793, 1.31, 0.692, 0)
mesh = SubResource("BoxMesh_ohry6")
surface_material_override/0 = ExtResource("1_act5r")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D2/StaticBody3D"]
shape = SubResource("BoxShape3D_yeix8")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1.565, 0, 0, 0, 2.70463, 0.883766, 0, -5.10817, 0.46793, 6.7048, 1.65665, 0)
mesh = SubResource("BoxMesh_ohry6")
surface_material_override/0 = ExtResource("1_act5r")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D3/StaticBody3D"]
shape = SubResource("BoxShape3D_yeix8")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(0.283748, -5.02351, 0.460175, 0, 2.70463, 0.883766, -1.53906, -0.926156, 0.0848398, 3.54404, 4.43946, -3.62113)
mesh = SubResource("BoxMesh_ohry6")
surface_material_override/0 = ExtResource("1_act5r")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D4/StaticBody3D"]
shape = SubResource("BoxShape3D_yeix8")

[connection signal="timeout" from="Player/DashAnimationTimer" to="Player" method="_on_dash_animation_timer_timeout"]

[editable path="Player/Char_FemaleA_01"]
